--- a/RFdiseasePredictor.ipynb
+++ b/RFdiseasePredictor.ipynb
@@ -21,11 +21,9 @@
     "import joblib\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pickle\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn import preprocessing\n"
+    "from sklearn.preprocessing import StandardScaler \n"
    ]
   },
   {
@@ -459,6 +457,19 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "2306a1bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature Scaling (Standard Scaler)\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f09eb0ee",
    "metadata": {},
    "outputs": [],
@@ -470,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "4b16cb87",
    "metadata": {},
    "outputs": [],
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "becc582a",
    "metadata": {},
    "outputs": [
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "42a3098c",
    "metadata": {},
    "outputs": [
@@ -714,7 +725,7 @@
        "[5 rows x 133 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "56f58b23",
    "metadata": {},
    "outputs": [],
@@ -739,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "95a20412",
    "metadata": {},
    "outputs": [],
@@ -750,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3c1db286",
    "metadata": {},
    "outputs": [
@@ -768,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "8b91a0da",
    "metadata": {},
    "outputs": [],
@@ -786,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "72753ac5",
    "metadata": {},
    "outputs": [
@@ -927,7 +938,7 @@
        " 'yellow_crust_ooze': 131}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "da227c8a",
    "metadata": {},
    "outputs": [],
@@ -948,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "6b79fecc",
    "metadata": {},
    "outputs": [],
@@ -958,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "09aa3ed9",
    "metadata": {},
    "outputs": [
@@ -968,7 +979,7 @@
        "array(['Osteoarthristis'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "be679857",
    "metadata": {},
    "outputs": [
@@ -997,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "6f5d09e5",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "59720179",
    "metadata": {},
    "outputs": [],
@@ -1021,35 +1032,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "edf4fbf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compressed Random Forest: 0.45 MB\n"
+     ]
+    }
+   ],
    "source": [
     "# Printing compressed file\n",
     "\n",
-    "#joblib.dump(randomForestClass, \"RFModelDiseasePredictr.joblib\", compress=3)  # compression is ON!\n",
+    "joblib.dump(randomForestClass, \"RFModelDiseasePredictr.joblib\", compress=3)  # compression is ON!\n",
     "\n",
-    "#print(f\"Compressed Random Forest: {np.round(os.path.getsize('RFModelDiseasePredictr.joblib') / 1024 / 1024, 2) } MB\")"
+    "print(f\"Compressed Random Forest: {np.round(os.path.getsize('RFModelDiseasePredictr.joblib') / 1024 / 1024, 2) } MB\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "e2096f63",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save RF Model as .sav file\n",
     "\n",
-    "filename = 'RFModelPre.pkl'\n",
-    "pickle.dump(randomForestClass, open(filename, 'wb'))"
+    "#filename = 'RFModelPre.pkl'\n",
+    "#pickle.dump(randomForestClass, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c94634f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sc.joblib']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(sc, 'sc.joblib')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94634f7",
+   "id": "dac64f31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "040368e7",
    "metadata": {},
    "outputs": [],
    "source": []
