API Debugger and Flask working

--- a/API Debug.ipynb
+++ b/API Debug.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bd9d7fca",
+   "id": "6af20ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "db81c53a",
+   "id": "3b3a8a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f8c3477a",
+   "id": "4abeae8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3271e068",
+   "id": "97450f41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1,\n",
+       "[0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -55,10 +61,6 @@
        " 1,\n",
        " 1,\n",
        " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
        " 1,\n",
        " 0,\n",
        " 1,\n",
@@ -66,13 +68,10 @@
        " 0,\n",
        " 1,\n",
        " 1,\n",
-       " 1,\n",
        " 0,\n",
        " 1,\n",
        " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 1,\n",
        " 0,\n",
@@ -80,9 +79,6 @@
        " 1,\n",
        " 0,\n",
        " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
        " 0,\n",
        " 1,\n",
        " 1,\n",
@@ -93,26 +89,22 @@
        " 1,\n",
        " 1,\n",
        " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
        " 1,\n",
        " 0,\n",
        " 0,\n",
        " 1,\n",
        " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
        " 1,\n",
+       " 0,\n",
        " 1,\n",
        " 1,\n",
        " 0,\n",
@@ -120,9 +112,7 @@
        " 1,\n",
        " 1,\n",
        " 0,\n",
-       " 0,\n",
        " 1,\n",
-       " 0,\n",
        " 0,\n",
        " 1,\n",
        " 0,\n",
@@ -133,23 +123,17 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
        " 1,\n",
        " 1,\n",
        " 0,\n",
        " 0,\n",
        " 1,\n",
-       " 0,\n",
        " 1,\n",
        " 1,\n",
-       " 0,\n",
-       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -159,20 +143,36 @@
        " 0,\n",
        " 1,\n",
        " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
        " 0,\n",
        " 1,\n",
        " 1,\n",
-       " 0,\n",
-       " 0,\n",
        " 0,\n",
        " 0,\n",
        " 1,\n",
        " 0,\n",
        " 1,\n",
        " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
        " 1]"
       ]
      },
@@ -188,17 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6e4d3376",
+   "execution_count": 14,
+   "id": "1a792bbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31544"
+       "28"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +209,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "17981570",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': 'Common Cold'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requests.post(url, json = x).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aec03d24",
+   "id": "5c176caf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d66d97",
    "metadata": {},
    "outputs": [],
    "source": []
