added prescreen tool gif in images folder

--- a/NNdiseasePredictor.ipynb
+++ b/NNdiseasePredictor.ipynb
@@ -1002,8 +1002,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3ce9c6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.save(\"NNModel.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a4b1db",
    "metadata": {},
    "outputs": [],
    "source": []
